  - LM-2 MTS support incomplete


--------------
- Change Log -
--------------

0.5.3b RC7 (11/20/2010)
-----------------------

--- Logger ---
- Improved serial connection handling
- MRF Stealth Gauge support added
- Fixed Compare map scroll list
- Added saving parameter list show/hide to settings
- Added USER input read ability for ZT2

0.5.3b RC6 (05/02/2009)
-----------------------

--- Logger ---
This RC includes the new Road Dyno/ET tab, version 16.
To use the Road Dyno:
	- Set the Mode button to Dyno
	- Clear all parameters from the other tabs to achieve the best data
	  resolution.
	- On the Dyno tab, select your vehicle and adjust the tire size and
	  gear you will be using.
	- Once set, press the Record Data button.
	- With the button pressed setup to do your WOT run, no need to hurry.
	- Hold WOT run to redline.  As soon as WOT is no longer detected the
	  graph will be updated with your estimated wheel power and torque.
	- Adjust temperature and humidity if they are not accurate and
	  "recalculate" the results.
	- Smoothing, lower is more smooth and higher is less smooth.
	- Right click on the graph to Save as...
	- If you wish to average two or more consecutive runs, press the
	  Record Data button again and repeat the WOT run.  At the end of
	  each run the datasets will be combined and the results displayed.
	- A Reference Trace can be Saved and displayed at any time for comparison.
	- The Clear button will delete all recorded data for a fresh start.

To use the ET feature:
	- Set the Mode button to ET
	- Clear all parameters from the other tabs to achieve the best data
	  resolution.
	- On the Dyno tab, select the vehicle you will be using.
	- Once set and the vehicle is stationary, SPEED = 0, press the Record ET button.
	- With the button pressed complete your 1/4 mile run.
	- As soon as 1/4 mile distance is covered the graph will be updated with
	  your elapsed times and speeds.
	- Right click on the graph to Save as...